[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bosses/Spider Boss/Attacks/Sprites/Spider Simple Missle.png" type="Texture" id=1]
[ext_resource path="res://Bosses/Spider Boss/Attacks/TrackingMissile.gd" type="Script" id=2]
[ext_resource path="res://Misc Sprites/Laser Light.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "missile_anim"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.65, 0.75, 0.8, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1, 0, 3, 0, 1, 3 ]
}

[node name="TrackingMissile" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 127.027, 163.415 )
scale = Vector2( 0.864157, 0.836402 )
texture = ExtResource( 1 )
flip_v = true
hframes = 4
frame = 3

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/missile_anim = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 122.569, 157.397, 120.207, 159.523, 120.128, 168.5, 125.247, 173.539, 128.711, 173.618, 133.987, 168.657, 133.987, 159.523, 131.546, 157.318, 131.467, 156.137, 132.176, 156.137, 132.334, 153.538, 121.703, 153.538, 121.861, 155.979, 122.805, 155.9 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_TrackingMissile_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
